# ml-cookbook

./: .gitignore  README.md  pyproject.toml
projects/titanic/: __main__.py
